microsite/static/css/custom.css
/* ... */
.cncf-block {
  padding-top: 40px;
  text-align: center;
}

.cncf-logo {
  background: center no-repeat url(../img/cncf-white.svg);
  width: 100%;
  height: 100px;
  margin-bottom: 40px;
  margin-top: 20px;
}

.nav-footer .copyright {
  width: 100%;
  padding: 0 8px;
  color: #fff;
  margin: 0 auto;
  font-size: 10pt;
}

@media only screen and (max-width: 485px) {
  .nav-footer .copyright {
    width: auto;
    margin: 0 1.5em;
  }
}

/* Zoomed images using the medium-zoom library should be on top of screen. */
.medium-zoom-image {
  z-index: 10000;
}

h3.collapsible span.arrow {
  margin-right: 4px;
}

.Sidebar__Container {
  top: 50%;
  right: 0;
  position: fixed;
  color: rgb(0, 0, 0);
  transition: transform 250ms ease-in-out, height 250ms ease-in-out;
  display: flex;
  align-items: center;
  transform: translateY(-50%) translateX(500px);
}

@media only screen and (max-height: 675px) {
  .Sidebar__Container {
    top: 65%;
  }
}

@media only screen and (max-width: 650px) {
  .Sidebar__Container {
    transform: translateY(-50%) translateX(300px);
  }
}

.Sidebar__Container--open {
  transform: translateY(-50%);
}

.Sidebar__Button {
  transform: rotate(-90deg) translateY(49px);
  padding: 12px 16px;
  border-radius: 8px 8px 0 0;
  background-color: rgb(92, 214, 200);
  color: rgb(0, 0, 0);
  outline: 0;
  border: 0;
  font-family: Helvetica Neue, sans-serif;
  max-height: 48px;
  max-width: 150px;
  font-size: 16px;
  cursor: pointer;
}

@media only screen and (max-width: 650px) {
  .Sidebar__Button {
    width: 175px;
    font-size: 15px;
  }
}

.Sidebar__Button:hover {
  transform: rotate(-90deg) translateY(49px) scale(1.01);
}

#Sidebar__HubSpotContainer {
  width: 500px;
  background-color: white;
  border-radius: 8px 0 0 8px;
  height: 500px;
}

@media only screen and (max-width: 650px) {
  #Sidebar__HubSpotContainer {
    width: 300px;
  }
}

#Sidebar__HubSpotContainer form {
  overflow-y: auto;
  height: 100%;
  padding: 25px 25px 0px 25px;
}

#Sidebar__HubSpotContainer .hs-button {
  padding: 12px 16px;
  border-radius: 8px;
  background-color: rgb(92, 214, 200);
  color: rgb(0, 0, 0);
  border: 0;
}

#Sidebar__HubSpotContainer.submitted-message {
  min-height: 260px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0 16px;
}

#Sidebar__HubSpotContainer.submitted-message p {
  color: rgb(0, 0, 0);
}

/* logo.md */
.logoWhite {
  background-color: white;
}

/* Utility API Styling */
.textGreen {
  color: #82b366;
}
.textBlue {
  color: #6c8ebf;
}
.textPurple {
  color: #9673a6;
}
.textYellow {
  color: #d6b656;
}
.textRed {
  color: #b85450;
}
.textAlignCenter {
  text-align: center;
}
/* End of Utility API Styling */

